--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,37 +1,67 @@
-.top {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  overflow: hidden;
-  padding: 200px 0;
-}
-
-.title {
-  font-size: 3rem;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.description {
-  text-align: center;
-}
-
 .bgimg {
+  background-image: url("/path-to-dot-pattern.png");
+  background-size: 8px 8px;
+  background-repeat: repeat;
   position: absolute;
   top: 0;
   right: 0;
   width: 100%;
   height: 600px;
   object-fit: cover;
-  object-position: right;
+  z-index: -1;
+}
+
+.title {
+  font-family: "Press Start 2P", cursive;
+  text-shadow: 3px 3px 0 #000, 6px 6px 0 #555;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem;
+  color: #fff;
+}
+
+.description {
+  font-family: "Press Start 2P", cursive;
+  color: #fff;
+  text-shadow: 2px 2px 0 #000;
+  text-align: center;
+}
+
+.newsLink a {
+  display: inline-block;
+  padding: 10px 20px;
+  font-family: "Press Start 2P", cursive;
+  font-size: 14px;
+  color: #fff;
+  background-color: #000;
+  border: 2px solid #fff;
+  text-decoration: none;
+  text-shadow: 1px 1px 0 #333;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.newsLink a:hover {
+  background-color: #555;
+  transform: scale(1.1);
+}
+
+.newsTitle {
+  font-family: "Press Start 2P", cursive;
+  font-size: 1.5rem;
+  color: #333;
+  text-shadow: 1px 1px 0 #000;
+}
+
+.top {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  overflow: hidden;
+  padding: 200px 0;
 }
 
 .news {
@@ -41,10 +71,7 @@
   margin: -40px auto 0;
   padding: 24px 40px;
   border-radius: var(--border-radius);
-}
-
-.newsTitle {
-  font-size: 1.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .newsLink {
@@ -63,22 +90,13 @@
   }
 
   .description {
-    text-align: center;
     font-size: 0.9rem;
     text-align: left;
   }
 
   .bgimg {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: auto;
     height: 600px;
-    object-fit: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: -1;
   }
 
   .news {
