--- a/app/_components/ConfirmButton.module.css
+++ b/app/_components/ConfirmButton.module.css
@@ -1,3 +1,9 @@
+.p {
+  font-family: "PixelMplus12-Regular" -apple-system, BlinkMacSystemFont,
+    "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3",
+    Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
+}
+
 .confirm-button {
   background-color: #4caf50;
   color: white;
