--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@ body {
     Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   color: var(--color-text-main);
   line-height: 1.8;
+  background-color: black;
 }
 
 code {
