--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ body {
 }
 
 body {
-  font-family: "PixelMplus12-Regular" -apple-system, BlinkMacSystemFont,
+  font-family: "fonts/PixelMplus12-Regular" -apple-system, BlinkMacSystemFont,
     "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3",
     Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   color: var(--color-text-main);
