--- a/app/_components/ConfirmButton.module.css
+++ b/app/_components/ConfirmButton.module.css
@@ -1,5 +1,5 @@
 .p {
-  font-family: "PixelMplus12-Regular" -apple-system, BlinkMacSystemFont,
+  font-family: "fonts/PixelMplus12-Regular" -apple-system, BlinkMacSystemFont,
     "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3",
     Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
 }
