--- a/app/news/page.module.css
+++ b/app/news/page.module.css
@@ -1,7 +1,8 @@
 .kingContainer {
   position: absolute;
-  top: 60px; /* ヘッダーの下辺りに配置（ヘッダーの高さを合わせて調整） */
-  right: 3%; /* 画面の右側に配置 */
+  bottom: 0; /* 画面下部に配置 */
+  left: 50%; /* 画面の中央に配置 */
+  transform: translateX(-50%); /* 中央に合わせる */
   width: 100%;
   height: 50px;
   overflow: visible;
@@ -17,7 +18,8 @@
   object-fit: contain; /* アスペクト比を保ちながら画像を縮小 */
   position: absolute;
   bottom: 0; /* bodyの終了直前に配置 */
-  right: 0; /* 画面の一番右に配置 */
+  left: 50%; /* 画面の中央に配置 */
+  transform: translateX(-50%); /* 画像の中央を画面中央に合わせる */
   width: auto; /* 自動で幅を調整 */
   height: 50px; /* 高さは50pxに設定 */
   overflow: visible;
@@ -26,7 +28,7 @@
 .king {
   position: absolute;
   top: 0;
-  right: -100px; /* 初期位置を画面外右側 */
+  left: 100%; /* 初期位置を画面外右側 */
   height: 50px;
   animation: walk-left 15s linear infinite; /* アニメーションを15秒でゆっくり歩かせる */
 }
